<resources>
    <string name="app_name">Notifications</string>
    <string name="enable_as_nsl">Enable as notification service</string>
    <string name="menu_delete_all_except_today">Delete all except today</string>
    <string name="menu_delete_all_except_today_confirmation">Are you sure you want to delete all notifications except today?</string>
    <string name="go_to_app">Go to app</string>
    <string name="copy_title">Copy sender</string>
    <string name="copy_text">Copy message</string>
    <string name="notifications_deleted">Notifications deleted</string>
    <string name="silenced_apps">Silenced apps</string>
    <string name="silence_app">Silence app</string>
    <string name="silenced_always">Silenced always</string>
    <string name="silenced_non_business">Silenced during non-business</string>
    <string name="not_silenced">Not silenced</string>
    <string name="set_as_important">Set as important</string>
    <string name="tap_to_unset_as_important">Tap to unset as important</string>
    <string name="unset_as_important">Unset as important</string>
    <string name="important_senders">Important senders</string>
    <string name="yesterday">Yesterday %s</string>
    <string name="all">All</string>
    <string name="view_full_text">View full text</string>
    <string name="unset_as_important_confirmation">Are you sure you want to unset sender as important?</string>
    <string name="settings">Settings</string>
    <string name="copied_title">Copied title</string>
    <string name="copied_text">Copied text</string>
    <string name="silenced_notification">%s (silenced)</string>
    <string name="notifications_list_updated">Updated list of notifications</string>
    <string name="no_title">(No Title/Sender)</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>